--- a/Classwork/Interface Builder and Functions/Interface Builder and Functions/Base.lproj/Main.storyboard
+++ b/Classwork/Interface Builder and Functions/Interface Builder and Functions/Base.lproj/Main.storyboard
@@ -33,6 +33,7 @@
                                     <rect key="frame" x="177" y="380" width="46" height="30"/>
                                 </variation>
                                 <connections>
+                                    <action selector="fibonacciButt:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="pPd-VI-ree"/>
                                     <action selector="helloBut:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="G0Y-9m-fEu"/>
                                 </connections>
                             </button>
